<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/lockIcon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/forgot_password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgotpassword" />

    <TextView
        android:id="@+id/headlineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgotPasswordText"
        android:textColor="#3B3B3B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lockIcon"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/lockIcon"
        app:layout_constraintTop_toBottomOf="@+id/lockIcon" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgotPasswordIntroText"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/headlineText"
        app:layout_constraintStart_toStartOf="@+id/headlineText"
        app:layout_constraintTop_toBottomOf="@+id/headlineText" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/gradientcolor"
        android:gravity="start|center_vertical"
        android:text="@string/sendText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordButton"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordButton">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>