<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="300sp"
        android:text="@string/plusSymbol"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/adsprofilePictureButton"
        app:layout_constraintEnd_toEndOf="@+id/adsprofilePictureButton"
        app:layout_constraintStart_toStartOf="@+id/adsprofilePictureButton"
        app:layout_constraintTop_toTopOf="@+id/adsprofilePictureButton" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profilePicture"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="36sp"
        android:contentDescription="@string/profilePictureDesc"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/adsprofilePictureButton"
        android:layout_width="46sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104sp"
        android:background="@drawable/profilepicturebutton"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:translationZ="5sp"
        app:layout_constraintEnd_toEndOf="@+id/profilePicture"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/profilePicture"
        app:layout_constraintTop_toTopOf="@+id/profilePicture" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="72sp"
        android:layout_marginEnd="8sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adsprofilePictureButton">

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/nameInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0sp"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/gradientcolor"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputLayout" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="28sp"
        android:text="@string/loginIntroText"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="8sp"
        android:text="@string/login"
        android:textColor="#E25E31"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>